--- a/2020-11-16按钮/Button.html
+++ b/2020-11-16按钮/Button.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="utf-8" />
 		<title>CSS Gradient Buttons</title>
-		<link rel="stylesheet" href="css/Button.css">
+		<link rel="stylesheet" href="Button.css">
 	</head>
 	<body>
 		<div  class="container">
